--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <title>Testimonials Grid</title>
 
@@ -16,6 +19,7 @@
   <main class="main-container">
 
     <article class="daniel">
+      <img class="quotation" src="images/bg-pattern-quotation.svg" alt="quotation pattern">
 
       <div class="profile-box">
         <img src="images/image-daniel.jpg" alt="daniel image">
@@ -62,6 +66,7 @@
 
     <article class="jeanette">
       <div class="profile-box">
+        <img src="images/image-jeanette.jpg" alt="jeanette image">
         <p class="name">
           Jeanette Harmon
         </p>
@@ -81,6 +86,7 @@
 
     <article class="patrick">
       <div class="profile-box">
+        <img src="images/image-patrick.jpg" alt="patrick image">
         <p class="name">
           Patrick Abrams
         </p>
@@ -103,6 +109,7 @@
 
     <article class="kira">
       <div class="profile-box">
+        <img src="images/image-kira.jpg" alt="kira image">
         <p class="name">
           Kira Whittle
         </p>
